--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
         ></iframe
         ><br />
         {{video.title}} <button @click="video.show=false">Hide</button>
-        <button @click="video.show=true">Show</button> <br />
+        <button @click="video.show=true">Show</button> 
         <button @click="deleteVideo(video)">Delete</button>
+		<br />
       </span>
 
       <! -- Exercise: 
